--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,6 +5,6 @@
 @import "./components/agence";
 @import './components/connectionForm';
 @import "./components/footer";
-
+@import "./components/whatsapp"
 
 
