--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -58,7 +58,7 @@ width: 100%;
   }
   .profile:hover {
     background: url("../imgt/menage.jpg") right center no-repeat;
-    background-size:100%;
+    background-size:400px;
   }
   .profile:hover h2 {
     opacity: 1;
