--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,6 +5,5 @@
 @import "./components/agence";
 @import './components/connectionForm';
 @import "./components/footer";
-@import "./components/whatsapp"
-
-
+@import "./components/whatsapp";
+@import "./components/-dtlservices.scss"
