--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -6,15 +6,16 @@
 
 }
 
-iframe{
-width: 100%;
-
+.welcome{
+  text-align: center;
+  display:inline-block ;
 }
+
 .services{
 
-  text-align:center;
+  text-align: center;
   margin-bottom: 5%;
-  display:block;
+  display:inline-block;
   // img {
   //   margin:0.5%; 	
   //     box-shadow: 5px 9px 15px $color-1;
@@ -50,29 +51,29 @@ width: 100%;
     transition: opacity 1s;
   }
   .profile {
-    background: url("../imgt/menage.jpg") center center no-repeat;
+    background: url("https://images.unsplash.com/photo-1585421514284-efb74c2b69ba?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80") center center no-repeat;
     background-size: 300px;
     display: inline-block;
     margin:0.5%; 	
     box-shadow: 5px 9px 15px $color-1;
   }
   .profile:hover {
-    background: url("../imgt/menage.jpg") right center no-repeat;
-    background-size:400px;
+    background: url("https://images.unsplash.com/photo-1585421514284-efb74c2b69ba?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80") right center no-repeat;
+    background-size: 400px;
   }
   .profile:hover h2 {
     opacity: 1;
   }
 
   .profile1 {
-    background: url("../imgt/lingere.jpg") center center no-repeat;
+    background: url("https://images.unsplash.com/photo-1630329273801-8f629dba0a72?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2670&q=80") center center no-repeat;
     background-size: 300px;
     display: inline-block;
     margin:0.5%; 	
     box-shadow: 5px 9px 15px $color-1;
   }
   .profile1:hover {
-    background: url("../imgt/lingere.jpg") right center no-repeat;
+    background: url("https://images.unsplash.com/photo-1630329273801-8f629dba0a72?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2670&q=80") right center no-repeat;
     background-size: 400px;
   }
   .profile1:hover h2 {
@@ -80,14 +81,14 @@ width: 100%;
   }
 
   .profile2 {
-    background: url("../imgt/courtier.jpg") center center no-repeat;
+    background: url("https://images.unsplash.com/photo-1617347454431-f49d7ff5c3b1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1630&q=80") center center no-repeat;
     background-size: 300px;
     display: inline-block;
     margin:0.5%; 	
     box-shadow: 5px 9px 15px $color-1;
   }
   .profile2:hover {
-    background: url("../imgt/courtier.jpg") right center no-repeat;
+    background: url("https://images.unsplash.com/photo-1617347454431-f49d7ff5c3b1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1630&q=80") right center no-repeat;
     background-size: 400px;
   }
   .profile2:hover h2 {
@@ -95,28 +96,28 @@ width: 100%;
   }
 
   .profile3 {
-    background: url("../imgt/traiteur.jpg") center center no-repeat;
+    background: url("https://images.unsplash.com/photo-1512061942530-e6a4e9a5cf27?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1469&q=80") center center no-repeat;
     background-size: 300px;
     display: inline-block;
     margin:0.5%; 	
     box-shadow: 5px 9px 15px $color-1;
   }
   .profile3:hover {
-    background: url("../imgt/traiteur.jpg") right center no-repeat;
+    background: url("https://images.unsplash.com/photo-1512061942530-e6a4e9a5cf27?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1469&q=80") right center no-repeat;
     background-size: 400px;
   }
   .profile3:hover h2 {
     opacity: 1;
   }
   .profile4 {
-    background: url("../imgt/eleve2.jpg") center center no-repeat;
+    background: url("https://images.unsplash.com/photo-1563986768494-4dee2763ff3f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80") center center no-repeat;
     background-size: 300px;
     display: inline-block;
     margin:0.5%; 	
     box-shadow: 5px 9px 15px $color-1;
   }
   .profile4:hover {
-    background: url("../imgt/eleve2.jpg") right center no-repeat;
+    background: url("https://images.unsplash.com/photo-1563986768494-4dee2763ff3f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80") right center no-repeat;
     background-size: 400px;
   }
   .profile4:hover h2 {
@@ -124,14 +125,14 @@ width: 100%;
   }
 
   .profile5 {
-    background: url("../imgt/location.jpg") center center no-repeat;
+    background: url("https://images.unsplash.com/photo-1529390079861-591de354faf5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80") center center no-repeat;
     background-size: 300px;
     display: inline-block;
     margin:0.5%; 	
     box-shadow: 5px 9px 15px $color-1;
   }
   .profile5:hover {
-    background: url("../imgt/location.jpg") right center no-repeat;
+    background: url("https://images.unsplash.com/photo-1529390079861-591de354faf5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80") right center no-repeat;
     background-size: 400px;
   }
   .profile5:hover h2 {
@@ -139,14 +140,14 @@ width: 100%;
   }
 
   .profile6 {
-    background: url("../imgt/immobilier.jpg") center center no-repeat;
+    background: url("https://images.unsplash.com/photo-1562577309-4932fdd64cd1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80") center center no-repeat;
     background-size: 300px;
     display: inline-block;
     margin:0.5%; 	
     box-shadow: 5px 9px 15px $color-1;
   }
   .profile6:hover {
-    background: url("../imgt/immobilier.jpg") right center no-repeat;
+    background: url("https://images.unsplash.com/photo-1562577309-4932fdd64cd1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80") right center no-repeat;
     background-size: 400px;
   }
   .profile6:hover h2 {
@@ -154,14 +155,14 @@ width: 100%;
   }
 
   .profile7 {
-    background: url("../imgt/voix off.jpg") center center no-repeat;
+    background: url("https://images.unsplash.com/photo-1547658719-da2b51169166?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=928&q=80") center center no-repeat;
     background-size: 300px;
     display: inline-block;
     margin:0.5%; 	
     box-shadow: 5px 9px 15px $color-1;
   }
 .profile7:hover {
-    background: url("../imgt/voix off.jpg") right center no-repeat;
+    background: url("https://images.unsplash.com/photo-1547658719-da2b51169166?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=928&q=80") right center no-repeat;
     background-size: 400px;
   }
 .profile7:hover h2 {
@@ -169,14 +170,14 @@ width: 100%;
   }
 
   .profile8 {
-    background: url("../imgt/alimentation.jpg") center center no-repeat;
+    background: url("https://images.unsplash.com/photo-1626785774573-4b799315345d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1742&q=80") center center no-repeat;
     background-size: 300px;
     display: inline-block;
     margin:0.5%; 	
     box-shadow: 5px 9px 15px $color-1;
   }
   .profile8:hover {
-    background: url("../imgt/alimentation.jpg") right center no-repeat;
+    background: url("https://images.unsplash.com/photo-1626785774573-4b799315345d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1742&q=80") right center no-repeat;
     background-size: 400px;
   }
   .profile8:hover h2 {
@@ -184,14 +185,14 @@ width: 100%;
   }
 
   .profile9 {
-    background: url("../imgt/prestation.jpg") center center no-repeat;
+    background: url("https://images.unsplash.com/photo-1517245386807-bb43f82c33c4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80") center center no-repeat;
     background-size: 300px;
     display: inline-block;
     margin:0.5%; 	
     box-shadow: 5px 9px 15px $color-1;
   }
   .profile9:hover {
-    background: url("../imgt/prestation.jpg") right center no-repeat;
+    background: url("https://images.unsplash.com/photo-1517245386807-bb43f82c33c4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80") right center no-repeat;
     background-size: 400px;
   }
   .profile9:hover h2 {
@@ -199,14 +200,14 @@ width: 100%;
   }
 
   .profile10 {
-    background: url("../imgt/vulgarisateur.jpg") center center no-repeat;
+    background: url("https://images.unsplash.com/photo-1618221639244-c1a8502c0eb9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1160&q=80") center center no-repeat;
     background-size: 300px;
     display: inline-block;
     margin:0.5%; 	
     box-shadow: 5px 9px 15px $color-1;
   }
   .profile10:hover {
-    background: url("../imgt/vulgarisateur.jpg") right center no-repeat;
+    background: url("https://images.unsplash.com/photo-1618221639244-c1a8502c0eb9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1160&q=80") right center no-repeat;
     background-size: 400px;
   }
   .profile10:hover h2 {
@@ -214,29 +215,22 @@ width: 100%;
   }
 
   .profile11 {
-    background: url("../imgt/travaux public.jpg") center center no-repeat;
+    background: url("https://images.unsplash.com/photo-1558227691-41ea78d1f631?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80") center center no-repeat;
     background-size: 300px;
     display: inline-block;
     margin:0.5%; 	
     box-shadow: 5px 9px 15px $color-1;
   }
   .profile11:hover {
-    background: url("../imgt/travaux public.jpg") right center no-repeat;
+    background: url("https://images.unsplash.com/photo-1558227691-41ea78d1f631?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80") right center no-repeat;
     background-size: 400px;
   }
   .profile11:hover h2 {
     opacity: 1;
   }
 
-  button {
-    margin-left: 70%;
-    border-radius: 5px;
-    padding: 10px;
-  }
+  
 
-  button:hover {
-    background-color: $color-3;
-  }
-
+ 
 
   
