--- a/src/styles/components/_logo.scss
+++ b/src/styles/components/_logo.scss
@@ -16,3 +16,17 @@
     color: black;
   }
 }
+
+.inf {
+  @include verticalCenter;
+  margin: 5px auto;
+  margin-top: 2%;
+  // width: 100px;
+  border-radius: 5px;
+  padding: 5px 0;
+  box-shadow: 0 2px 3px rgb(117, 206, 217);
+  // background: url(../../assets/img/main.jpg) center/cover;
+  h3 {
+    color: black;
+  }
+}
