--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -3,16 +3,17 @@
   text-align: center;
   margin-top:2%;
   margin-bottom: 2%;
+}
+body{ 
+  text-align: center;
 
 }
-
 .welcome{
   text-align: center;
   display:inline-block ;
 }
 
 .services{
-
   text-align: center;
   margin-bottom: 5%;
   display:inline-block;
@@ -33,9 +34,10 @@
     position: relative;
     border-radius: 15px;
     transition: background 0.8s;
+    margin-top: 10px;
     overflow: hidden;
-    box-shadow: 0 70px 63px -60px #000;
-    display: flex;
+    box-shadow: 5px 9px 15px $color-1;
+    display: inline-block;
     justify-content: center;
     align-items: center;
   }
